# rpg04

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LLMcites.txt  README.md  contributions.md  linux_install_things_before_build  vcpkg.json
.github/workflows/: pipeline.yml  sonarcloud.yml
old/: WorldComponent.hpp  WorldParser.hpp
scripts/: compile.sh  test.sh
src/main/: main.cpp  textureObjects.hpp
src/main/Abstract/: EntityID.hpp  GlobalProperties.hpp  MathUtils.hpp  RegisterService.hpp  TILE_ENUMS.hpp
src/main/Abstract/AssetManager/: AssetManager.hpp
src/main/Abstract/Audio/: AudioManager.hpp  AudioSystem.hpp  PlaySoundEvent.hpp
src/main/Abstract/ECS/: Component.hpp  ECSManager.hpp  ECSRepository.hpp  Entity.hpp  SlowRepository.hpp  Test1.hpp
src/main/Abstract/Exception/: AllParticipantsDeadException.hpp  InvalidAttackActionSelectedException.hpp  InvalidCombatTargetException.hpp  MissingComponentException.hpp  NoParticipantsException.hpp  PlayerComponentIncompleteException.hpp  PlayerNotFoundException.hpp  SaveSlotNotFoundException.hpp
src/main/Abstract/GameConfig/: GameConfig.hpp
src/main/Abstract/GameState/: GameState.hpp
src/main/Abstract/Overwordl/: AnimationMovementSystem.hpp  AnimationSetterSystem.hpp  BonfireSystem.hpp  BoundingBoxSystem.hpp  CameraSystem.hpp  CharacterPreProcessSystem.hpp  CleanUpSystem.hpp  CollisionSystem.hpp  Components.hpp  DialogSystem.hpp  DoorSystem.hpp  EntityFactory.hpp  HudSystem.hpp  InputSystem.hpp  InteractionSystem.hpp  ItemSystem.hpp  MenuSystem.hpp  MovementSystem.hpp  PositionComponent.hpp  RenderSystem.hpp  SwitchBattleModeSystem.hpp  SwitchLayerSystem.hpp  WorldParser.hpp  enumToComponent.hpp
src/main/Abstract/Persistance/: PersistenceRegistrationSystem.hpp  SaveManager.hpp
src/main/Abstract/PersistenceManager/: PersistenceManager.hpp
src/main/Abstract/Player/: Player.h
src/main/Abstract/UI/: GameOverMenu.hpp  MainMenu.hpp
src/main/Abstract/Utils/: Color.hpp  GraveConfig.hpp  WorldUtlis.hpp
src/main/Implementation/: RegisterService.cpp  dummy.cpp  main.cpp
src/main/Implementation/Audio/: AudioManager.cpp  AudioSystem.cpp
src/main/Implementation/Components/: BattleComponent.hpp  BattleStatsComponent.hpp  InventoryComponent.hpp  StatsComponent.hpp  WeaponComponent.hpp
src/main/Implementation/ECS/: ECSRepository.cpp  Test1.cpp
src/main/Implementation/GameConfig/: GameConfig.cpp
src/main/Implementation/Overworld/: AnimationMovementSystem.cpp  AnimationSetterSystem.cpp  BonfireSystem.cpp  BoundingBoxSystem.cpp  CameraSystem.cpp  CharacterPreProcessSystem.cpp  CleanUpSystem.cpp  CollisionSystem.cpp  DialogSystem.cpp  DoorSystem.cpp  HudSystem.cpp  InputSystem.cpp  InteractionSystem.cpp  ItemSystem.cpp  MenuSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  SwitchBattleModeSystem.cpp  SwitchLayerSystem.cpp  WorldParser.cpp
src/main/Implementation/Persistance/: PersistenceRegistrationSystem.cpp  SaveManager.cpp
src/main/Implementation/Player/: Player.cpp
src/main/Implementation/Systems/: AISystem.cpp  BattleInputSystem.cpp  CombatSystem.cpp  EnemyHealthBarSystem.cpp  HealthBarSystem.cpp  StatsDistributorSystem.cpp
src/main/Implementation/UI/: GameOverMenu.cpp  MainMenu.cpp
src/main/Implementation/Utils/: Color.cpp
src/ressources/: application_config.json  config.json  config2.py  configGlobalConfigVariables.py  configInit.py  configTileset.py  hud.txt  res.txt
src/ressources/TileMapEditorOutput/base_config/: Tilesheet_BaseConfig.tsj  base_configTilset.tiled-project  base_configTilset.tiled-session  mainProperty.json
src/ressources/TileMapEditorOutput/filledWithEnums/: Background_Dark-Green_TileSet.tsj  Tileset_without_background.tsj  Tilesheet_WithEnums.tsj  Tilesheet_edited.tsx  Tilesheet_edited3.tsj  filledWithEnunm.tiled-project  filledWithEnunm.tiled-session  map.tiled-project  map.tiled-session  map.tmj  properties.json  tiles.tsj
src/ressources/saves/: save_1.json
src/test/: Archetype.cpp  ArchetypeBitSignatureTests.cpp  test.cpp
src/test/Abstract/AssetManager/: AssetManagerTest.cpp
src/test/Abstract/Utils/: WorldUtilsTest.cpp
src/test/ECS/: TestComponents.hpp
src/test/ECS/Archetype/: ArchetypeBitSignatureTest.cpp  ComponentPoolTest.cpp  EntityIDTest.cpp
src/test/ECS/Component/: ComponentTypeInfoTest.cpp
src/test/Implementation/Overworld/: SwitchBattleModeSystemTest.cpp
src/test/Implementation/Persistance/: SaveManagerTest.cpp
(+62 files in other folders)
